--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h1>Chinmoy Das</h1>
+    <h1>Nihilist Penguin</h1>
     <p>Full Stack Developer | Web Designer | Tech Enthsiast</p>
     <hr>
     <h2>About Me</h2>
